# RP2040-Telit-C-SDK

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  firmware.c
.github/workflows/: cmake.yml
.working_backups/: 02-05-2022.c  15-04-2022.c  17-04-2022.c  25-04-2022.c  29-04-2022.c  30-04-2022.c  fw-02-05-2022.uf2  fw-04-05-2022.uf2  fw-17-04-2022.uf2  fw-25-04-2022.uf2  fw-29-04-2022.uf2  fw-30-04-2022.uf2
